<resources>
    <string name="app_name">Vendroid</string>
    <string name="splashscreen_text">Loading Vendroid&#8230;</string>
    <string name="autocheck_vencord">Automatically update Vencord (Coming soon)</string>
    <string name="autocheck_vendroid">Automatically check for Vendroid updates</string>
    <string name="updates_title">Updates</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discord_branch">Discord branch</string>
    <string name="stable">Stable</string>
    <string name="ptb">PTB</string>
    <string name="canary">Canary</string>
    <string name="vencord_location">Vencord location</string>
    <string name="set_custom_location">Set custom location (Only check this if you know what you\'re doing!)</string>
    <string name="custom_location_url">Custom location URL</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="vendroid_update_available">VendroidEnhanced update available</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="viggy">Viggy, by shoritsu</string>
    <string name="shiggy">Shiggy, by naga_U</string>
    <string name="oneko">Oneko</string>
    <string name="splashscreen">Splash screen</string>
    <string name="recovery_shortcut_name">Recovery mode</string>
    <string name="cleared_all">Cleared all cookies</string>
    <string name="start_normally">Start normally</string>
    <string name="start_normally_desc">Don\'t do anything and start the app normally.</string>
    <string name="safe_mode">Safe mode</string>
    <string name="safe_mode_desc">Use this option to launch the app and load Discord, but without Vencord or any VendroidEnhanced tweak injected.</string>
    <string name="open_settings">Open settings</string>
    <string name="open_settings_desc">Configure VendroidEnhanced.</string>
    <string name="save_settings">Save settings</string>
    <string name="desktop_mode">Desktop mode (expect some lag!)</string>
    <string name="equicord_small">Equicord</string>
    <string name="equicord">Use Equicord (Vencord fork with more plugins)</string>
    <string name="app_icons_title">App icons</string>
    <string name="app_icons_desc">Change your VendroidEnhanced app icon! Occasionally, seasonal icons may appear.</string>
    <string name="quickcss">QuickCSS</string>
    <string name="save_exit"><![CDATA[Save & exit]]></string>
    <string name="force_update">Force update Vencord</string>
    <string name="force_update_desc">Start VendroidEnhanced, but force a Vencord update. Useful if you are crashing or similar and cannot access the Updater tab.</string>
</resources>