<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updates_title"
                android:textColor="@color/text"
                android:textSize="18sp" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/check_vendroid_updates"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:checked="true"
                android:text="@string/autocheck_vendroid" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/autoupdate_vencord"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:enabled="false"
                android:text="@string/autocheck_vencord" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discord_branch"
                android:textColor="@color/text"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/stable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/stable" />

                <RadioButton
                    android:id="@+id/ptb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ptb" />

                <RadioButton
                    android:id="@+id/canary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/canary" />
            </RadioGroup>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>




    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:layout_collapseMode="pin"
            app:title="Welcome to Vendroid"
            app:titleTextColor="@color/text" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="Start Vendroid"
        android:text="Start Vendroid"
        app:icon="@drawable/baseline_check_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>