<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/quickcss"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/save_css"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/save_exit" />

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/quickcss">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/css"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:fontFamily="monospace"
                android:gravity="top" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/viggy_gif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1"
            android:scaleY="1"
            android:src="@drawable/viggy"
            android:visibility="gone" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/shiggy_gif"
            android:layout_width="match_parent"
            android:layout_height="228dp"
            android:scaleX="1"
            android:scaleY="1"
            android:src="@drawable/shiggy"
            android:visibility="gone" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/oneko_gif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleX="1"
            android:scaleY="1"
            android:src="@drawable/oneko"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/splashscreen_text"
            android:textColor="@color/text"
            android:textSize="22sp" />

    </LinearLayout>

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />

</android.widget.RelativeLayout>